# celery_study

tasks/: Makefile  celeryconfig.py  main.py  message-attributes.json  pyproject.toml
tasks/celery_app/: utils.py
tasks/tasks/: tasks.py
tasks_local/: Makefile  app.py  celeryconfig.py  config_app.py  message-event.json  pyproject.toml  tasks.py
tasks_local/docker/: docker-compose.yml
