[tool.poetry]
name = "tasks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pycurl = "^7.45.2"
flower = "^2.0.1"
celery = {extras = ["sqs"], version = "^5.3.6"}
fastapi = "^0.105.0"
uvicorn = "^0.25.0"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
